Fixed collapsable menu

--- a/Module3Solutions/CSS/styles.css
+++ b/Module3Solutions/CSS/styles.css
@@ -8,152 +8,83 @@
 body {
   font-size: 16px;
   color: #fff;
-   background-color: #a9a8a8;
+  background-color: #ffffff;
 }
 
-/** HEADER **/
-.container {
-  width: 100%;
-
-}
 #header-nav {
   background-color: #ff6a6a;
   border-radius: 0;
   border: 0;
-  margin: 0;
-  padding: 0;
- /* height:75px; */
 }
 .navbar-header {
-  height: 75px;
+  height: 50px;
   background-color: #ff6a6a;
   margin-bottom: 0px;
-  
 }
 
-.navbar-brand {
-  padding-top: 0px;
-  height: 75px;
-  background-color: #ff6a6a;
-  margin: 0 0 0;
-  
-}
-
-.navbar-brand h1 { /* Restaurant name */
+.navbar-brand h1 { 
   color: #a64ca6;
-  font-size: 50px;
-  text-transform: uppercase;
+  font-size: 25px;
   font-weight: bold;
-  text-shadow: 1px 1px 1px #222;
-  padding-top: 10px;
-  padding-left: 15px;
   margin-top: 0;
-  margin-bottom: 0;
-  background-color: #ff6a6a;
+  margin-bottom: 0px;
+  padding-left: 5px;
 }
+
+.navbar-brand a:hover, .navbar-brand a:focus {
+  text-decoration: none;
+}
+
 #collapsable-nav  {
-  text-align: center;
-  background-color: #3b9b7c;
-  margin: 0 25 0;
-  width: 100%;
-  border: 0 0 0 0;
-  padding: 0 0 0 0;
+ 
 }
-#collapsable-nav li {
-  height: 40px;
-}
+
 #nav-list {
   margin-top: 0px;
   margin-bottom: 0px;
 }
-#nav-list a {
-  color: #951C49;
-  text-align: center;
-  line-height: 40px;
 
+#nav-list a {
+  color: #000000;
+  text-align: center;
+  margin: 0 0 0;
 }
+
 #nav-list a:hover {
   background: #E7E7E7;
 }
+
 #nav-list hr {
-  margin-top: 0px;
-  margin-bottom: 0px;
+  margin: 0 0 0;
 }
-.navbar-header button.navbar-toggle, .navbar-header .icon-bar {
-  border: 1px solid #61122f;
+
+#nav-list nav-list{
+  height: 40px;
 }
-.navbar-header button.navbar-toggle {
-  margin-top: 10px;
-}
+
 .navbar-nav {
   margin-top: 0px;
   margin-bottom: 0px;
 }
 
 
-
-/********** Medium devices only **********/
-@media (min-width: 992px) {
-  .col-md-12 {
-    float: left;
-    width: 100%;
-  }
-  
-}
-
-/********** Small devices only **********/
-@media (min-width: 768px) and (max-width: 991px) {
-  .col-sm-12 {
-    float: left;
-    width: 100%;
-  }
-
-}
-
 /********** Extra small devices only **********/
 @media (max-width: 767px) {
-  .col-xs-12 {
-    float: left;
-    width: 100%;
-    padding: 25 25 25;
-  }
-  .container {
-  height: 55px;
-  }
-  #header-nav {
-   height:55px; */
-}
-  .navbar-header {
-  height: 55px;
-}
-  .navbar-brand {
-    height: 55px;
-    padding-top: 0px;
-    padding-bottom: 0px;
-}
-  .navbar-brand h1 { /* Restaurant name */
-    font-size: 30px; 
-    padding-top: 10px;
-  }
- 
-    #collapsable-nav a { 
-    font-size: 1.2em;
-
-    
-  }
   
-
-  
-  
+#collapsable-nav  { 
+  background-color: #3b9b7c;
+  } 
 }
   
   #main-content {
     background-color: #FFFFFF;
     clear: both;
   }
+ 
  #menu-title  h2 {
     color: #000000;
     font-weight: bold;
+    margin-top: 0px;
  }
   #menu-item  h3 {
     text-align: center;
@@ -164,6 +95,7 @@ body {
     padding-top: 10px;
     padding-bottom: 15px;
  }
+  
   #menu-content  h3 {
     text-align: center;
     color: #000000;
